# fastwatch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
c_api/: fastwatch.h  fastwatch_c_api.cpp
cli/: main.cpp
core/: watcher_core.cpp  watcher_core.h  watcher_event_types.h
core/platform/: watcher_linux.cpp  watcher_linux.h
node/: addon.cpp  binding.gyp  package-lock.json  package.json
node/tests/: test.js
